--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Release files
         uses: softprops/action-gh-release@v1
         with:
+          generate_release_notes: true
           fail_on_unmatched_files: true
           files: |
               dist/*.whl
