--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+      - name: Set version env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install build
+      - name: Set current release version
+        run: sed -i 's#version="0.0.0"#version="${{ env.RELEASE_VERSION }}"#' setup.py
       - name: Build package
         run: python -m build
       - name: Publish package
